force-app/main/default/objects/Fielo_Yearly_Crop__c/Fielo_Yearly_Crop__c.object-meta.xml
<CustomObject>
    <label>Yearly Crop</label>
    <nameField>
        <displayFormat>YC-{0000}</displayFormat>
        <label>Yearly Crop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yearly Crop</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>