force-app/main/default/objects/Fielo_Yearly_Crop__c/fields/Combined_Syngenta_Potential__c.field-meta.xml
<CustomField>
    <fullName>Combined_Syngenta_Potential__c</fullName>
    <formula>Syngenta_CP_potential__c  +  Syngenta_Seed_Potential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Syngenta Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>