force-app/main/default/objects/Fielo_Yearly_Crop__c/fields/CP_Potential__c.field-meta.xml
<CustomField>
    <fullName>CP_Potential__c</fullName>
    <label>CP Potential</label>
    <summarizedField>Fielo_Cropping__c.Total_CP_Potential__c</summarizedField>
    <summaryForeignKey>Fielo_Cropping__c.Yearly_Crop__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>