force-app/main/default/objects/Fielo_Yearly_Crop__c/fields/Farm_Size_HA__c.field-meta.xml
<CustomField>
    <fullName>Farm_Size_HA__c</fullName>
    <label>Farm Size (HA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>