force-app/main/default/objects/Fielo_Yearly_Crop__c/fields/Harvest_Year__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Year__c</fullName>
    <label>Harvest Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>