force-app/main/default/objects/Fielo_Yearly_Crop__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Yearly Crop</relationshipLabel>
    <relationshipName>Yearly_Crop</relationshipName>
    <type>Lookup</type>
</CustomField>