force-app/main/default/objects/Fielo_Yearly_Crop__c/fields/Syngenta_CP_potential__c.field-meta.xml
<CustomField>
    <fullName>Syngenta_CP_potential__c</fullName>
    <label>Syngenta CP potential</label>
    <summarizedField>Fielo_Cropping__c.Total_Syngenta_CP_Potential__c</summarizedField>
    <summaryForeignKey>Fielo_Cropping__c.Yearly_Crop__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>