force-app/main/default/objects/Fielo_Yearly_Crop__c/fields/Syngenta_Seed_Potential__c.field-meta.xml
<CustomField>
    <fullName>Syngenta_Seed_Potential__c</fullName>
    <label>Syngenta Seed Potential</label>
    <summarizedField>Fielo_Cropping__c.Total_Syngenta_Seed_Potential__c</summarizedField>
    <summaryForeignKey>Fielo_Cropping__c.Yearly_Crop__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>