force-app/main/default/objects/Fielo_Yearly_Crop__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Harvest_Year__c</columns>
    <columns>Farm_Size_HA__c</columns>
    <columns>CP_Potential__c</columns>
    <columns>Seed_Potential__c</columns>
    <columns>Syngenta_CP_potential__c</columns>
    <columns>Syngenta_Seed_Potential__c</columns>
    <columns>Combined_Syngenta_Potential__c</columns>
    <columns>Member__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>